@@ -1,7 +1,7 @@
 import(grid)
 import(XML)
 import(methods)
-importFrom(grDevices, pdf, dev.off, rgb)
+importFrom(grDevices, pdf, dev.cur, dev.off, dev.set, rgb)
 importFrom(base64enc, base64decode)
 importFrom(png, readPNG)
 importFrom(jpeg, readJPEG)
